Updated README with alternate instructions